# isopedia

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README copy.md  README.md  TODO.txt  build_linux_dist.sh
.github/workflows/: release.yml
.snakemake/metadata/: dGVzdC9ldmFsX2h1bWFuX2lzb2Zvcm1zLnN1bW1hcnkudHh0
conda_recipe/: meta.yaml
doc/: indexing_gtf.md
index_manifest/: manifest.toml
mock/: mock_interim.py  sqlite3db_bench.py  sqlite3db_index.py
script/: batch_1.meta.dedeup.tsv  batch_1.meta.tsv  dedup_meta_tbl.py  flatten_cpm_count.py  flatten_cpm_count_split.py  isopedia-splice-viz-temp.html  isopedia-splice-viz.py  print_binary.py  profile_gtf.py  temp.html  temp2.html  template copy 2.html  template copy.html  template.html
src/: assemble.rs  bptree.rs  breakpoints.rs  chromosome.rs  constants.rs  dataset_info.rs  em.rs  error.rs  fusion.rs  gene_index.rs  global_stats.rs  grouped_tx.rs  gtf.rs  io.rs  isoform.rs  isoformarchive.rs  lib.rs  logger.rs  meta.rs  myio.rs  output.rs  pnir.rs  pnir_archive.rs  query.rs  reads.rs  results.rs  runtime.rs  tmpidx.rs  utils.rs  writer.rs
src/cmd/: download.rs  fusion.rs  index.rs  isoform.rs  merge.rs  mod.rs  profile.rs  splice.rs
src/subcmd/: aggr.rs  anno_fusion.rs  anno_isoform.rs  anno_splice.rs  extr.rs  idx.rs  index.rs  isoform.rs  merge.rs  mod.rs  profile.rs  splice.rs
src/tools/: inspection.rs  manifest.rs  merge_replicates.rs  mod.rs  output.rs  profile.rs  view.rs
toy_ex/: isoform.anno.tsv  isopedia-splice-view.html  isopedia-splice-view.json  manifest.tsv
(+3 files in other folders)
