[package]
name = "isopedia"
version = "1.5.1"
edition = "2021"
authors = [ "Xinchang Zheng"]

[dependencies]
lru="0.12.5"
zerocopy = "0.8.0"
zerocopy-derive = "0.8.0"
rust-htslib = {version="=0.48.0",features=["static"]}
bio-types = "1.0.4"
ahash = "0.8.11"
rustc-hash = "2.0.0"
indexmap = {version="2.6.0",features=["serde"]}
serde = {version = "1.0.215", features=["derive"]}
serde_with = "3.11.0"
bincode = "1.3.3"
flate2 = "1.0.35"
itertools = "0.13.0"
noodles-gtf =  "0.35.0" 
noodles-fasta = "0.46.0" 
noodles-core = "0.15.0"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
log = "0.4.27"
env_logger = "0.11.6"
distances = "1.8.0"
rust-lapper = "1.1.0"
serde_json = "1.0"
memmap2 = "0.9.5"
anyhow = "1.0.98"
num-format = "0.4"
rayon = "1.11.0"
nix = "0.30.1"

[dev-dependencies]
tempfile = "3.2"
rand = "0.8"

[profile.release]
panic = 'abort'
debug = true